@@ -6,6 +6,7 @@ To do :
 - key codes for TI8x (check)
 //- manage ERR packets which can be received at any time
 - macros.h should be endian dependant (configure check ?)
+- make dirlist more generic (merge apps & vars)
 
 To do (USB):
 - create a linked list of allocated virtual packet and clear/release them on ticalcs_error_get. Same for calcparam
@@ -17,7 +18,7 @@ To do (USB):
 Log:
 
 - 06/05/2006, version 0.1.1: roms
-	- 
+	- make ticalcs_dirlist_mem_used useable with apps tree
 
 - 15/04/2006, version 0.1.0: roms
 	- implemented USB hand-helds support
